[package]
name = "eadup"
version = "0.1.0"
edition = "2026"
authors = ["Ivan Goglenkov (wellman4)"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/wellman4/eadup"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

clap = { version = "4.6.1", features = ["derive"] }

printpdf = "0.9.1"